<resources>
    <string name="app_name">BookStoreApp</string>
    <string name="add_book">Add book</string>
    <string name="i_have_an_account_signin">I have an account.<font color="#F44336"> SignIn</font></string>
    <string name="i_am_a_new_user_signup">I am a new user.<font color="#F44336"> SignUp</font></string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="signout">SignOut</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="imageurl">ImageUrl</string>
    <string name="pick_image_from_gallery">+ Pick image from gallery</string>
    <string name="select_a_category">Select a category</string>
    <string name="text">Text</string>
    <string-array name="categories">
        <item>Fiction</item>
        <item>Non-fiction</item>
        <item>Science fiction</item>
        <item>Romance</item>
        <item>Biography</item>
        <item>Poetry</item>
        <item>Mystery</item>
        <item>Fantasy</item>
        <item>Horror</item>
        <item>Other</item>
    </string-array>
</resources>