<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9"
    android:background="@drawable/books"
    tools:context=".BookListActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_your_email_address"
        android:background="@drawable/edit_text_bg"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#251F1D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="10dp"
        tools:text="ivanov@gmail.com" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_the_password"
        android:background="@drawable/edit_text_bg"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#251F1D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_create_user"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="10dp"
        tools:text="12345" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_create_user"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/my_btn"
        android:fontFamily="@font/adamina"
        android:text="@string/i_am_a_new_user_signup"
        android:textColor="#251F1D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_signIn"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword"
        tools:layout_editor_absoluteX="10dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_signIn"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/my_btn"
        android:fontFamily="@font/adamina"
        android:text="@string/i_have_an_account_signin"
        android:textColor="#F6DDED"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_user"
        tools:layout_editor_absoluteX="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>